# fastapi-news-monitor-agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: celery_app.py  main.py
app/modules/news/: methods.py  prompt.py  schema.py  tasks.py
app/utils/: openai_client.py  tavily_client.py
